--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Bolu Ria | Sedia Berbagai Jenis Bolu by Request
 description: Menerima order berbagai jenis bolu
 
 # Keywords for crawling (displayed in the header)
-keywords: bolu pekalongan, jual bolu wiradesa
+keywords: bolu pekalongan, jual bolu wiradesa, jual bolu terdekat
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /assets/img/icon-180.png
