--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ name: Bolu Ria | Sedia Berbagai Jenis Bolu by Request
 # Short bio or description (displayed in the header)
 description: Menerima order berbagai jenis bolu
 
+# Lock page
+locked: true
+
 # Keywords for crawling (displayed in the header)
 keywords: bolu pekalongan, jual bolu wiradesa, jual bolu terdekat
 
@@ -15,7 +18,7 @@ keywords: bolu pekalongan, jual bolu wiradesa, jual bolu terdekat
 avatar: /assets/img/icon-180.png
 
 # Versioning assets with date
-assets: '2023-02-14T07:09:00Z'
+assets: '2023-02-18T07:09:00Z'
 
 # Theme color for browser tab on mobile
 theme_color: '#fff'
