--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ keywords: bolu pekalongan, jual bolu wiradesa, jual bolu terdekat
 avatar: /assets/img/icon-180.png
 
 # Versioning assets with date
-assets: '2023-02-18T07:09:00Z'
+assets: '2023-03-02T07:09:00Z'
 
 # Theme color for browser tab on mobile
 theme_color: '#fff'
@@ -35,8 +35,8 @@ whatsapp_text: Halo%20Kak%20Ria,%0ASaya%20mau%20order%20
 #
 
 # Paginate home
-# paginate: 5
-# paginate_path: "/blog/page:num/"
+paginate: 5
+paginate_path: "/produk/:num/"
 
 # Includes an icon in the footer for each username you enter
 footer-links:
