--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ keywords: bolu pekalongan, jual bolu wiradesa, jual bolu terdekat
 avatar: /assets/img/icon-180.png
 
 # Versioning assets with date
-assets: '2023-03-02T07:09:00Z'
+assets: '2024-01-10T07:09:00Z'
 
 # Theme color for browser tab on mobile
 theme_color: '#fff'
@@ -64,7 +64,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: "https://boluria.orderio.id"
+url: "https://boluria.orderio.my.id"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
